--- a/src/registrar/templates/domain_dsdata.html
+++ b/src/registrar/templates/domain_dsdata.html
@@ -100,12 +100,12 @@
             class="usa-button"
         >Save
       </button>
-    </form>
+    <!-- </form>
 
-    <form aria-label="form to undo changes to the DS records">
+    <form aria-label="form to undo changes to the DS records"> -->
       <button
             type="submit"
-            class="usa-button usa-button--outline btn-cancel"
+            class="usa-button usa-button--outline"
             name="btn-cancel-click"
             aria-label="Reset the data in the DS records to the registry state (undo changes)"
         >Cancel
