--- a/src/registrar/templates/includes/modal.html
+++ b/src/registrar/templates/includes/modal.html
@@ -53,7 +53,7 @@
         <form method="post">
             {% csrf_token %}
             <button
-                type="button"
+                type="submit"
                 class="usa-button usa-modal__close"
                 aria-label="Close this window"
                 name="btn-cancel-click"
