fixed logic on save with no dnssec data records; fixed link on dns page

--- a/src/registrar/templates/domain_dns.html
+++ b/src/registrar/templates/domain_dns.html
@@ -14,7 +14,7 @@
   {% url 'domain-dns-nameservers' pk=domain.id as url %}
   <p><a href="{{ url }}">DNS name servers</a></p>
 
-  {% url 'domain-dnssec' pk=domain.id as url %}
+  {% url 'domain-dns-dnssec' pk=domain.id as url %}
   <p><a href="{{ url }}">DNSSEC</a></p>
 
 {% endblock %}  {# domain_content #}
