fixed cancel button on nameservers

--- a/src/registrar/templates/domain_nameservers.html
+++ b/src/registrar/templates/domain_nameservers.html
@@ -76,16 +76,14 @@
             class="usa-button"
         >Save
       </button>
-    </div>
-  </form>
 
-  <form aria-label="form to undo changes to the Name Servers">
-    <button
-          type="submit"
-          class="usa-button usa-button--outline btn-cancel"
-          name="btn-cancel-click"
-          aria-label="Reset the data in the Name Server form to the registry state (undo changes)"
-      >Cancel
-    </button>
+      <button
+            type="submit"
+            class="usa-button usa-button--outline"
+            name="btn-cancel-click"
+            aria-label="Reset the data in the Name Server form to the registry state (undo changes)"
+        >Cancel
+      </button>
+    </div>
   </form>
 {% endblock %}  {# domain_content #}
