fix outline btn style (remove underline) when anchor emlement)

--- a/src/registrar/assets/sass/_theme/_buttons.scss
+++ b/src/registrar/assets/sass/_theme/_buttons.scss
@@ -22,8 +22,11 @@ a.breadcrumb__back {
   }
 }
 
-a.usa-button:not(.usa-button--unstyled, .usa-button--outline) {
+a.usa-button {
   text-decoration: none;
+}
+
+a.usa-button:not(.usa-button--unstyled, .usa-button--outline) {
   color: color('white');
 }
 
@@ -110,16 +113,4 @@ a.usa-button--unstyled:visited {
   @include at-media('tablet') {
     margin-left: units(2);
   }
-}
-
-
-// WARNING: crazy hack ahead:
-// Cancel button(s) on the DNSSEC form pages
-// We want to position the cancel button on the
-// dnssec forms next to the submit button
-// This button's markup is in its own form
-.btn-cancel {
-  position: relative;
-  top: -39.2px;
-  left: 88px;
 }
