fix usa-alert class on form_messages

--- a/src/registrar/templates/includes/form_messages.html
+++ b/src/registrar/templates/includes/form_messages.html
@@ -1,6 +1,6 @@
 {% if messages %}
 {% for message in messages %}
-<div class="usa-alert usa-alert--{{ message.tags }} usa-aler margin-bottom-2">
+<div class="usa-alert usa-alert--{{ message.tags }} usa-alert--slim margin-bottom-2">
     <div class="usa-alert__body">
        {{ message }}
     </div>
