--- a/src/registrar/templates/django/forms/label.html
+++ b/src/registrar/templates/django/forms/label.html
@@ -2,8 +2,12 @@
   class="{% if label_classes %} {{ label_classes }}{% endif %}{% if label_tag == 'legend' %} {{ legend_classes }}{% endif %}"
   {% if not field.use_fieldset %}for="{{ widget.attrs.id }}"{% endif %}
 >
-{{ field.label }}
-{% if widget.attrs.required %}
-  <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
-{% endif %}
+  {% if span_for_text %}
+    <span>{{ field.label }}</span>
+  {% else %}
+    {{ field.label }}
+  {% endif %}
+  {% if widget.attrs.required %}
+    <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+  {% endif %}
 </{{ label_tag }}>
