Updated error pages so that links to other sites open in new tab

--- a/src/registrar/templates/404.html
+++ b/src/registrar/templates/404.html
@@ -15,7 +15,7 @@
         {% translate "Status 404" %}
       </h2>
 
-      <p> Try going to the <a href="/">homepage</a>. If you can’t find what you’re looking for, <a href="{% public_site_url 'contact' %}"> contact us </a>.
+      <p> Try going to the <a href="/">homepage</a>. If you can’t find what you’re looking for, <a class="usa-link" rel="noopener noreferrer" target="_blank" href="{% public_site_url 'contact' %}">contact us</a>.
       </p>
     </div>
 
