--- a/src/registrar/templates/500.html
+++ b/src/registrar/templates/500.html
@@ -19,7 +19,7 @@
       {% else %}
         <p>
         Sorry! Try waiting a few minutes and then reloading the page.
-        <a href="{% public_site_url 'contact' %}"> contact us </a> if you need help.
+        <a class="usa-link" rel="noopener noreferrer" target="_blank" href="{% public_site_url 'contact' %}"> Contact us</a> if you need help.
         </p>
       {% endif %}
 
