--- a/src/registrar/templates/401.html
+++ b/src/registrar/templates/401.html
@@ -26,7 +26,7 @@
         Would you like to <a href="{% url 'login' %}"> try logging in again?</a>
       </p>
       <p>
-     If you'd like help with this error <a href="{% public_site_url 'contact/' %}"> contact us </a>.
+     If you'd like help with this error <a class="usa-link" rel="noopener noreferrer" target="_blank" href="{% public_site_url 'contact/' %}">contact us</a>.
       </p>
 
       {% if log_identifier %}
