Change generic connection error message, test for 13 nameservers on pageload

--- a/src/registrar/templates/domain_nameservers.html
+++ b/src/registrar/templates/domain_nameservers.html
@@ -81,7 +81,7 @@
             type="submit"
             class="usa-button usa-button--outline"
             name="btn-cancel-click"
-            aria-label="Reset the data in the Name Server form to the registry state (undo changes)"
+            aria-label="Reset the data in the name server form to the registry state (undo changes)"
         >Cancel
       </button>
     </div>
