--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -13,7 +13,11 @@
   <h1>Manage your domains</h2>
 
   <p class="margin-top-4">
-    <a href="{% url 'application:' %}" class="usa-button">
+    <a href="{% url 'application:' %}" 
+    class="usa-button usa-tooltip disabled-link"
+    data-position="right"
+    title="Coming in 2024"
+    >
       Start a new domain request
     </a>
   </p>
