Updated footer.html to have all links open in new tab

--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -47,7 +47,7 @@
     >
       <div class="usa-identifier__container">
         <div class="usa-identifier__logos">
-          <a href="https://www.cisa.gov" class="usa-identifier__logo"
+          <a rel="noopener noreferrer" target="_blank" href="https://www.cisa.gov" class="usa-identifier__logo"
             ><img
               class="usa-identifier__logo-img"
               src="{% static 'img/CISA_logo.png' %}"
@@ -62,7 +62,7 @@
         >
           <p class="usa-identifier__identity-domain">get.gov</p>
           <p class="usa-identifier__identity-disclaimer">
-            An official website of the <a href="https://www.cisa.gov" class="usa-link">Cybersecurity and Infrastructure Security Agency</a>
+            An official website of the <a rel="noopener noreferrer" target="_blank" href="https://www.cisa.gov" class="usa-link">Cybersecurity and Infrastructure Security Agency</a>
           </p>
         </section>
       </div>
@@ -74,35 +74,35 @@
       <div class="usa-identifier__container">
         <ul class="usa-identifier__required-links-list">
           <li class="usa-identifier__required-links-item">
-        <a href="{% public_site_url 'about/' %}"
+        <a rel="noopener noreferrer" target="_blank" href="{% public_site_url 'about/' %}"
               class="usa-identifier__required-link usa-link">About .gov</a>
           </li>
           <li class="usa-identifier__required-links-item">
-            <a
+            <a rel="noopener noreferrer" target="_blank"
               href="https://github.com/cisagov/getgov"
               class="usa-identifier__required-link usa-link usa-link--external"
               >.gov on Github</a
             >
           </li>
           <li class="usa-identifier__required-links-item">
- <a href="{% public_site_url 'privacy-policy/' %}" class="usa-identifier__required-link usa-link">Privacy policy</a>
+ <a rel="noopener noreferrer" target="_blank" href="{% public_site_url 'privacy-policy/' %}" class="usa-identifier__required-link usa-link">Privacy policy</a>
           </li>
           <li class="usa-identifier__required-links-item">
-            <a href="https://www.dhs.gov/accessibility" class="usa-identifier__required-link usa-link usa-link--external"
+            <a rel="noopener noreferrer" target="_blank" href="https://www.dhs.gov/accessibility" class="usa-identifier__required-link usa-link usa-link--external"
               >Accessibility</a
             >
           </li>
           <li class="usa-identifier__required-links-item">
-            <a href="{% public_site_url 'vulnerability-disclosure-policy/' %}" class="usa-identifier__required-link usa-link"
+            <a rel="noopener noreferrer" target="_blank" href="{% public_site_url 'vulnerability-disclosure-policy/' %}" class="usa-identifier__required-link usa-link"
               >Vulnerability disclosure policy</a>
           </li>
           <li class="usa-identifier__required-links-item">
-            <a href="https://www.cisa.gov/cisa-no-fear-act-reporting" class="usa-identifier__required-link usa-link"
+            <a rel="noopener noreferrer" target="_blank" href="https://www.cisa.gov/cisa-no-fear-act-reporting" class="usa-identifier__required-link usa-link"
               >No FEAR Act data</a
             >
           </li>
           <li class="usa-identifier__required-links-item">
-            <a href="https://www.dhs.gov/freedom-information-act-foia" class="usa-identifier__required-link usa-link usa-link--external"
+            <a rel="noopener noreferrer" target="_blank" href="https://www.dhs.gov/freedom-information-act-foia" class="usa-identifier__required-link usa-link usa-link--external"
               >FOIA requests</a
             >
           </li>
@@ -117,6 +117,6 @@
         <div class="usa-identifier__usagov-description">
           Looking for U.S. government information and services?
         </div>
-        <a href="https://www.usa.gov/" class="usa-link usa-link--external">Visit USA.gov</a>
+        <a rel="noopener noreferrer" target="_blank" href="https://www.usa.gov/" class="usa-link usa-link--external">Visit USA.gov</a>
       </div>
     </section>
