--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -13,6 +13,7 @@
   <h1>Manage your domains</h2>
 
   <p class="margin-top-4">
+    {% if is_production %}
     <a href="{% url 'application:' %}" 
     class="usa-button usa-tooltip disabled-link"
     data-position="right"
@@ -20,6 +21,11 @@
     >
       Start a new domain request
     </a>
+    {% else %}
+    <a href="{% url 'application:' %}" class="usa-button">
+      Start a new domain request
+    </a>
+    {% endif %}
   </p>
 
   <section class="section--outlined tablet:grid-col-11 desktop:grid-col-10">
@@ -134,7 +140,7 @@
     {% endif %}
   </section>
 
-  {# Note: Reimplement this after MVP.. #}
+  {# Note: Reimplement this after MVP #}
   <!--
   <section class="section--outlined tablet:grid-col-11 desktop:grid-col-10">
     <h2>Archived domains</h2>
