--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -15,7 +15,7 @@
   <p class="margin-top-4">
     {% if is_production %}
     <a href="{% url 'application:' %}" 
-    class="usa-button usa-tooltip disabled-link"
+    class="usa-button usa-tooltip disabled-domain-request-link"
     data-position="right"
     title="Coming in 2024"
     >
