--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -15,14 +15,15 @@
   <p class="margin-top-4">
     {% if is_production %}
     <a href="{% url 'application:' %}" 
-    class="usa-button usa-tooltip disabled-domain-request-link"
+    class="usa-button usa-tooltip disabled-link"
     data-position="right"
     title="Coming in 2024"
     >
       Start a new domain request
     </a>
     {% else %}
-    <a href="{% url 'application:' %}" class="usa-button">
+    <a href="{% url 'application:' %}" class="usa-button"
+    >
       Start a new domain request
     </a>
     {% endif %}
