--- a/src/registrar/assets/sass/_theme/_buttons.scss
+++ b/src/registrar/assets/sass/_theme/_buttons.scss
@@ -27,14 +27,21 @@ a.usa-button {
 }
 
 a.usa-button.disabled-link {
-  cursor: default !important;
   background-color: #ccc !important;
 }
 
-a.usa-button.disabled-domain-request-link:hover {
+a.usa-button.disabled-link:hover {
   color: #ccc !important;
   cursor: not-allowed !important;
   text-decoration: none !important;
+  
+}
+
+a.usa-button.disabled-link:focus {
+  color: #ccc !important;
+  cursor: not-allowed !important;
+  text-decoration: none !important;
+  outline: none !important;
 }
 
 a.usa-button:not(.usa-button--unstyled, .usa-button--outline) {
