--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -14,7 +14,7 @@
 
   <p class="margin-top-4">
     {% if is_production %}
-    <a href="event.stopPropagation();" 
+    <a href="javascript:void(0)" 
     class="usa-button usa-tooltip disabled-link"
     data-position="right"
     title="Coming in 2024"
