--- a/src/registrar/assets/sass/_theme/_admin.scss
+++ b/src/registrar/assets/sass/_theme/_admin.scss
@@ -187,7 +187,7 @@ h1, h2, h3 {
 .object-tools li a,
 .object-tools p a {
     font-family: "Source Sans Pro Web", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-    text-transform: capitalize!important;
+    text-transform: none!important;
     font-size: 14px!important;
 }
 
