--- a/src/registrar/templates/django/admin/domain_change_list.html
+++ b/src/registrar/templates/django/admin/domain_change_list.html
@@ -15,7 +15,7 @@
     {% if has_add_permission %}
     <li>
         <a href="{% url 'admin:registrar_domain_add' %}" class="addlink">
-            Add Domain
+            Add domain
         </a>
     </li>
     {% endif %}
