--- a/src/registrar/assets/sass/_theme/_uswds-theme.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme.scss
@@ -132,4 +132,10 @@ in the form $setting: value,
   $theme-table-sorted-background-color: "accent-cool-lightest",
   $theme-table-sorted-icon-color: "primary-darker",
   $theme-table-unsorted-icon-color: "primary",
+
+  /*----------------------------
+  # Tooltip Settings
+  -----------------------------*/
+  $theme-tooltip-background-color: "accent-cool-lighter",
+  $theme-tooltip-font-color: "black"
 );
