Add right coloring

--- a/src/registrar/assets/sass/_theme/_uswds-theme.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme.scss
@@ -136,6 +136,6 @@ in the form $setting: value,
   /*----------------------------
   # Tooltip Settings
   -----------------------------*/
-  $theme-tooltip-background-color: "accent-cool-lighter",
+  $theme-tooltip-background-color: $theme-color-accent-cool-lightest,
   $theme-tooltip-font-color: "black"
 );
