--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -3,6 +3,14 @@
 <html class="no-js" lang="{{ LANGUAGE_CODE }}">
 
 <head>
+  {% if IS_PRODUCTION %}
+  <!-- Google tag (gtag.js) --> 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZ5QSP6QPL"></script>
+  <script> 
+    window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-PZ5QSP6QPL');
+  </script>
+  {% endif %}
+
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>
