Refix coloring - typo

--- a/src/registrar/assets/sass/_theme/_uswds-theme.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme.scss
@@ -136,6 +136,6 @@ in the form $setting: value,
   /*----------------------------
   # Tooltip Settings
   -----------------------------*/
-  $theme-tooltip-background-color: "D6E9F2",
+  $theme-tooltip-background-color: "accent-cool-lightest",
   $theme-tooltip-font-color: "black"
 );
