--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -62,10 +62,11 @@
 
   {% if IS_DEMO_SITE %}
   <section aria-label="Alert" >
-      <div class="usa-alert usa-alert--warning usa-alert--no-icon">
+      <div class="usa-alert usa-alert--info">
       <div class="usa-alert__body">
+        <h4 class="usa-alert__heading">New domain requests are paused</h4>
         <p class="usa-alert__text">
-        <strong>BETA SITE:</strong> We built a new way to request and manage .gov domains — a new .gov registrar. Take a look around, but don’t rely on this site yet. This site is for testing purposes only. Don’t enter real data into any form on this site. Visit <a href="https://get.gov" class="usa-link">get.gov</a> for the latest updates on the new .gov registrar.
+        This is the new registrar for managing .gov domains. Note that we’re not accepting requests for new .gov domains until January 2024. Follow all .gov updates at <a href="https://get.gov/updates/" class="usa-link">https://get.gov/updates/</a>.
         </p>
       </div>
     </div>
