--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -18,6 +18,9 @@
     class="usa-button usa-tooltip disabled-link"
     data-position="right"
     title="Coming in 2024"
+    aria-disabled="true"
+    aria-label="Coming in 2024" 
+    data-tooltip="true"
     >
       Start a new domain request
     </a>
