updated width of banner text; updated url and text

--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -65,8 +65,8 @@
       <div class="usa-alert usa-alert--info">
       <div class="usa-alert__body">
         <h4 class="usa-alert__heading">New domain requests are paused</h4>
-        <p class="usa-alert__text">
-        This is the new registrar for managing .gov domains. Note that we’re not accepting requests for new .gov domains until January 2024. Follow all .gov updates at <a href="https://get.gov/updates/" class="usa-link">https://get.gov/updates/</a>.
+        <p class="usa-alert__text measure-none">
+        This is the new registrar for managing .gov domains. Note that we’re not accepting requests for new .gov domains until January 2024. Follow .gov updates at <a href="https://get.gov/updates/" class="usa-link">get.gov/updates/</a>.
         </p>
       </div>
     </div>
