--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -13,7 +13,7 @@
   <h1>Manage your domains</h2>
 
   <p class="margin-top-4">
-    {% if not is_production %}
+    {% if is_production %}
     <a href="javascript:void(0)" 
     class="usa-button usa-tooltip disabled-link"
     data-position="right"
