Revert "Merge branch 'main' into za/additional-data-transferred-domains"
This reverts commit a6d5cd877b2379ef386eedc719095fe083218b40, reversing
changes made to bf88401327cc1dd2b8b804885e535c96f69180a4.

--- a/src/registrar/assets/sass/_theme/_admin.scss
+++ b/src/registrar/assets/sass/_theme/_admin.scss
@@ -187,7 +187,7 @@ h1, h2, h3 {
 .object-tools li a,
 .object-tools p a {
     font-family: "Source Sans Pro Web", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-    text-transform: none!important;
+    text-transform: capitalize!important;
     font-size: 14px!important;
 }
 
