modified the error message; updated the formatting of the code

--- a/src/registrar/templates/domain_base.html
+++ b/src/registrar/templates/domain_base.html
@@ -26,9 +26,9 @@
       {% if not domain.domain_info %}
         <div class="usa-alert usa-alert--error margin-bottom-2">
           <div class="usa-alert__body">
-            <h4 class="usa-alert__heading larger-font-sizing">Error!</h4>
+            <h4 class="usa-alert__heading larger-font-sizing">Domain missing domain information</h4>
             <p class="usa-alert__text ">
-              You are attempting to manage a domain, {{ domain.name }}, which does not have a Domain Information object. Please correct this in the admin.
+              You are attempting to manage a domain, {{ domain.name }}, which does not have a domain information object. Please correct this in the admin by editing the domain, and adding domain information, as appropriate.
             </p>
           </div>
         </div>
