Remove extra button

--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -137,9 +137,9 @@
       class="usa-sr-only usa-table__announcement-region"
       aria-live="polite"
     ></div>
-    <!-- {% else %}
+    {% else %}
     <p>You don't have any active domain requests right now</p>
-    <p><a href="{% url 'application:' %}" class="usa-button">Start a new domain request</a></p> -->
+    <!-- <p><a href="{% url 'application:' %}" class="usa-button">Start a new domain request</a></p> -->
     {% endif %}
   </section>
 
