Revert "Merge branch 'main' into za/1241-import-ao-transition-domains"
This reverts commit 7ba26e8d3bd566faef25a31f9f76f6e0deeced28, reversing
changes made to 0d749303dcfa023e326be0252e37d0d0ccd7570f.

--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -13,7 +13,7 @@
   <h1>Manage your domains</h2>
 
   <p class="margin-top-4">
-    {% if IS_PRODUCTION %}
+    {% if is_production %}
     <a href="javascript:void(0)" 
     class="usa-button usa-tooltip disabled-link"
     data-position="right"
@@ -139,7 +139,7 @@
     ></div>
     {% else %}
     <p>You don't have any active domain requests right now</p>
-    <!-- <p><a href="{% url 'application:' %}" class="usa-button">Start a new domain request</a></p> -->
+    <p><a href="{% url 'application:' %}" class="usa-button">Start a new domain request</a></p>
     {% endif %}
   </section>
 
