--- a/src/registrar/templates/domain_users.html
+++ b/src/registrar/templates/domain_users.html
@@ -19,6 +19,7 @@
     <li>To remove a domain manager, <a href="{% public_site_url 'contact/' %}"
       target="_blank" rel="noopener noreferrer" class="usa-link">contact us</a> for
       assistance.</li>
+    <li>All domain managers must keep their contact information updated and be responsive if contacted by the .gov team.</li>
   </ul>
 
   {% if domain.permissions %}
