--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -53,7 +53,7 @@
           <td data-sort-value="{{ domain.created_time|date:"U" }}" data-label="Date created">{{ domain.created_time|date }}</td>
           <td data-label="Status">
             {% if domain.state == "unknown" or domain.state == "dns needed"%}
-                DNS Needed
+                DNS needed
             {% else %}
                 {{ domain.state|title }}
             {% endif %}
