Removed redundant {{ friendly_message }}

--- a/src/registrar/templates/401.html
+++ b/src/registrar/templates/401.html
@@ -11,15 +11,10 @@
       <h1>
         {% translate "You are not authorized to view this page" %}
       </h1>
-  
-      {% if friendly_message %}
-        <p>{{ friendly_message }}</p>
-      {% else %}
-        <p>{% translate "Authorization failed." %}</p>
-      {% endif %}
+       
       <p>
         You must be an authorized user and need to be signed in to view this page. If you are an authorized user, 
-        <strong><a href="{% url 'login' %}"> try signing in again?</a>.</strong>
+        <strong><a href="{% url 'login' %}"> try signing in again</a>.</strong>
       </p>
       <p>
      If you'd like help with this error <a class="usa-link" rel="noopener noreferrer" target="_blank" href="{% public_site_url 'contact/' %}">contact us</a>.</p>
