--- a/src/registrar/templates/401.html
+++ b/src/registrar/templates/401.html
@@ -11,18 +11,18 @@
       <h1>
         {% translate "You are not authorized to view this page" %}
       </h1>
+
+              <h2>
+        {% translate "Status 401" %}
+      </h2>
        
       <p>
-        You must be an authorized user and need to be signed in to view this page. If you are an authorized user, 
+        You must be an authorized user and signed in to view this page. If you are an authorized user, 
         <strong><a href="{% url 'login' %}"> try signing in again</a>.</strong>
       </p>
       <p>
      If you'd like help with this error <a class="usa-link" rel="noopener noreferrer" target="_blank" href="{% public_site_url 'contact/' %}">contact us</a>.</p>
 
-         <h4>
-        {% translate "Status 401" %}
-      </h4>
-      
 
       {% if log_identifier %}
         <p>Here's a unique identifier for this error.</p>
